# parx

./: README-mono-notes.md  README.md  environment.yml  requirements.txt
configuration/: configuration_template.yaml
configuration/cromulence_demoone/: cromulence_demoone.yaml  cromulence_demoone_actions.yaml  gen_action_space_cromulence_demoone.py
configuration/cromulence_exampleone/: cromulence_examleone_actions.yaml  cromulence_exampleone.yaml  gen_action_space_cromulence_exampleone.py  test.yaml
examples/: .bof.c.swp  Makefile  bof  bof_solver  entropy.c  flip12.c  spray_and_pray.c  target.c  uaf.c  uaf_exploit.py  wrap_and_win.c  write_long.c  write_test.c  write_test2.c
reward/reward_functions/: invariant_chaining_reward.py  rlhf.py  surprise_reward.py
reward/static/: generate_from_output.py
src/: entry.py  proximal_policy_optimization.py  train.py
src/agent/: oracle.py  recurrent_actor_critic.py  replay_buffer.py  setup.py
src/cannoli_client/: Cargo.toml  Makefile  symbols.txt
src/cannoli_client/nav/: cannoli_env.py  cannoli_streaming_client.py  mock_nav.py
src/cannoli_client/scripts/: .gdbinit  wrap_and_win_solver.py  wrap_and_win_solver_32.py
src/cannoli_client/src/: .main.rs.swp  context.rs  lib.rs  main.rs  sinks.rs  tracer.rs
src/cannoli_client/src/_arch/: mipsel32.rs  mod.rs
src/cannoli_client/src/arch/: armv5tel.rs  mipsel32.rs  mod.rs
src/cannoli_client/src/utils/: backtrace.rs
src/libs/: bench.py  cannoli_env.py  cannoli_streaming_client.py  db.py
src/reward/: intrinsic_curiosity_module.py
(+3 files in other folders)
